--- a/.github/workflows/kubeval.yml
+++ b/.github/workflows/kubeval.yml
@@ -19,3 +19,5 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: instrumenta/kubeval-action@master
+        with:
+          schema-location: 'https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master'
