--- a/.github/workflows/kubeval.yml
+++ b/.github/workflows/kubeval.yml
@@ -24,12 +24,10 @@ jobs:
         with:
           files: k8s
           
-      - name: lint
-        uses: luke142367/Docker-Lint-Action@v1.0.0
+      - uses: ghe-actions/dockerfile-validator@v1
         with:
-          target: Dockerfile
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          dockerfile: 'Dockerfile'
+          lint: 'hadolint'
 
 
       #- uses: act10ns/slack@v1
